--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -13,32 +13,34 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs: 
   # This workflow contains a single job called "build"
-  runs-on: ubuntu-latest
+  build:
 
-  # Steps represent a sequence of tasks that will be executed as part of the job
-  steps:
-    - 
-      name: Checkout
-      uses: actions/checkout@v2
+    runs-on: ubuntu-latest
 
-    -
-      name: Set uo QEMU
-      uses: docker/setup-qemu-action@v1
-    
-    -
-      name: Set up Docker Buildx
-      uses: docker/login-action@v1
-      with:
-        username: ${{ secrets.DOCKERHUB_USERNAME }}
-        password: ${{ secrets.DOCKERHUB_TOKEN }}
+    # Steps represent a sequence of tasks that will be executed as part of the job
+    steps:
+      - 
+        name: Checkout
+        uses: actions/checkout@v2
 
-    -
-      name: Build and push
-      uses: docker/buid-push-action@v2
-      with:
-        context: .
-        file: ./Dockerfile
-        platforms: linux/amd64
-        push: true
-        tags: https://hub.docker.com/u/calory/python-helloworld:latest
+      -
+        name: Set uo QEMU
+        uses: docker/setup-qemu-action@v1
+      
+      -
+        name: Set up Docker Buildx
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      -
+        name: Build and push
+        uses: docker/buid-push-action@v2
+        with:
+          context: .
+          file: ./Dockerfile
+          platforms: linux/amd64
+          push: true
+          tags: https://hub.docker.com/u/calory/python-helloworld:latest
 
