--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -36,7 +36,7 @@ jobs:
 
       -
         name: Build and push
-        uses: docker/buid-push-action@v2
+        uses: docker/build-push-action@v2
         with:
           context: .
           file: ./Dockerfile
